# advent_of_code

./: .gitignore  README.md  day1trebpt2.c  day2cubept2.c  day3gearspt1.c  day3gearspt2.c  day4cardpt2.c  day5seedspt1.c  day6boatmathpt1.c  day6boatmathpt2.c  day6boatpt1.c  day6boatpt2.c
advent_of_code_2020/: Cargo.toml  day_13_part_1_bus.rs  day_13_part_2_bus.rs  day_1_part_1_accounting.rs  day_1_part_2_accounting.rs  day_2_part_1_password.rs  day_2_part_2_password.rs  day_3_part_1_toboggan.rs  day_3_part_2_toboggan.rs  day_4_part_1_passport.rs  day_4_part_2_passport.rs  day_5_part_1_bording.rs  day_5_part_2_bording.rs
advent_of_code_2020/src/: day_13_part_1_bus.rs  day_13_part_2_bus.rs  day_1_part_1_accounting.rs  day_1_part_2_accounting.rs  day_21_part_1.rs  day_21_part_2.rs  day_22_part_1.rs  day_22_part_2.rs  day_23_part_1.rs  day_23_part_2.rs  day_2_part_1_password.rs  day_2_part_2_password.rs  day_3_part_1_toboggan.rs  day_3_part_2_toboggan.rs  day_4_part_1_passport.rs  day_4_part_2_passport.rs  day_5_part_1_bording.rs  day_5_part_2_bording.rs  main.rs
advent_of_code_2022/: day1calpt1.c  day1calpt2.c  day20pt1.c  day2pt1.c
advent_of_code_2023/: day10pipespt1.c  day10pipespt2.c  day11glaxpt1.c  day11glaxpt2.c  day12springpt1.c  day12springpt2.c  day13mirrorpt1.c  day13mirrorpt2.c  day14parbpt1.c  day14parbpt2.c  day15libpt1.c  day15libpt2.c  day16htexpt1.c  day16htexpt2.c  day17crupt1.c  day17crupt2.c  day18lagoonpt1.c  day18lagoonpt2.c  day19gsortpt1.c  day19gsortpt2.c  day1trebpt1.c  day20emupt1.c  day20emupt2.c  day21walkpt1.c  day21walkpt2.c  day2cubept1.c  (+17 more)
(+89 files in other folders)
