[package]
name = "advent_of_code_2020"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day_1_part_1_accounting"
path = "day_1_part_1_accounting.rs"

[[bin]]
name = "day_1_part_2_accounting"
path = "day_1_part_2_accounting.rs"

[[bin]]
name = "day_2_part_1_password"
path = "day_2_part_1_password.rs"

[[bin]]
name = "day_2_part_2_password"
path = "day_2_part_2_password.rs"

[[bin]]
name = "day_3_part_1_toboggan"
path = "day_3_part_1_toboggan.rs"

[[bin]]
name = "day_3_part_2_toboggan"
path = "day_3_part_2_toboggan.rs"

[[bin]]
name = "day_4_part_1_passport"
path = "day_4_part_1_passport.rs"

[[bin]]
name = "day_13_part_1_bus"
path = "day_13_part_1_bus.rs"

[[bin]]
name = "day_13_part_2_bus"
path = "day_13_part_2_bus.rs"

[dependencies]
